# Simple_OOP_Projects

./: .gitignore  0136B.cpp  0217a.cpp  0318a.cpp  0478a.cpp  0617a.cpp  1330a.cpp  1671a.cpp  1717b.cpp  1729c.cpp  1734b.cpp  CMakeLists.txt  hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp
arrayd/: CMakeLists.txt
arrayd/arrayd/: CMakeLists.txt
mukhamedov_m_i/: .build.bat  .gitignore  .gitingore  0004a.cpp  0082a.cpp  0110a.cpp  0136a.cpp  0263a.cpp  0276a.cpp  0485a.cpp  0879b.cpp  0886b.cpp  0935b.cpp  0951a.cpp  0967b.cpp  0977a.cpp  0978a.cpp  1017a.cpp  1100c.cpp  1327a.cpp  1352a.cpp  1404a.cpp  1501a.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1626b.cpp  1649a.cpp  1670b.cpp  1675c.cpp  1680b.cpp  1690d.cpp  1692c.cpp  1692f.cpp  1699b.cpp  1701a.cpp  1703c.cpp  1721b.cpp  1744c.cpp  1744d.cpp  (+7 more)
mukhamedov_m_i/Munchausen/: AD.cpp  CMakeLists.txt  MUNCHAUSEN_MAIN_REPORT.docx  MUNCHAUSEN_MAIN_REPORT2.docx  graph.ipynb
mukhamedov_m_i/Munchausen/Try_hit_settings/: report.txt
mukhamedov_m_i/Munchausen/geom/: geom.cpp
mukhamedov_m_i/RVproject/: CMakeLists.txt  README.txt  doctest.h  main.cpp
mukhamedov_m_i/RVproject/RV/: CMakeLists.txt  RV.cpp  RV.hpp
mukhamedov_m_i/arrayd/: main.cpp
mukhamedov_m_i/arrayd/arrayd/: arrayd.cpp  arrayd.h
mukhamedov_m_i/bin.dbg/: arrayd_test  arrayt_test  matrixs_test  rational_test
mukhamedov_m_i/geom/: CMakeLists.txt  RV.cpp  geom.hpp
mukhamedov_m_i/prj.cw/: CMakeLists.txt
mukhamedov_m_i/prj.cw/doc/: Doxyfile.in
mukhamedov_m_i/prj.cw/example/: CMakeLists.txt  example_cmd_app.cpp
mukhamedov_m_i/prj.cw/source/: ccn.cpp  ccn.hpp
mukhamedov_m_i/prj.lab/arrayd/: arrayd.cpp
mukhamedov_m_i/prj.lab/arrayd/include/arrayd/: arrayd.hpp
mukhamedov_m_i/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
mukhamedov_m_i/prj.lab/arrayt/include/arrayt/: arrayt.hpp
mukhamedov_m_i/prj.lab/geo2d/: CMakeLists.txt
mukhamedov_m_i/prj.lab/geo2d/include/geo2d/: ellipse.hpp  geo2d.hpp  line.hpp  point.hpp  ring.hpp  transform.hpp
mukhamedov_m_i/prj.lab/geo2d/include/geo2d/figures/: line.hpp  point.hpp  polygon.hpp  ring.hpp
mukhamedov_m_i/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
mukhamedov_m_i/prj.lab/matrixs/include/matrixs/: matrixs.hpp
mukhamedov_m_i/prj.lab/orto/: orto.20230519
mukhamedov_m_i/prj.lab/rational/: CMakeLists.txt  rational.cpp
mukhamedov_m_i/prj.lab/rational/include/rational/: rational.hpp
mukhamedov_m_i/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
mukhamedov_m_i/rational/: .gitignore
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: CMakeLists.txt
prj.lab/arrayd/include/arrayd/: arrayd.hpp
prj.lab/arrayt/include/arrayt/: arrayt.hpp
prj.lab/munchausen/: config.txt
prj.lab/munchausen/Try_hit_settings/: file0.csv
prj.lab/munchausen/geom/: geom.hpp
prj.lab/rational/include/rational/: rational.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  rational_test.cpp
